--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-sm-3"></div>
             <div class="col-sm-3">
-                <form method="post" action="">
+                <form method="post" action="/getRate">
                     <div class="form-group row" id="weightGroup">
                         <label for="weightInput">Weight</label>
                         <input class="form-control mb-2" type="number" name="weightInput" id="weightInput" min=0 max=3.5 step=0.1 placeholder="0" pattern="^\d+(\.\d{1,2})?$" required>
@@ -52,10 +52,6 @@
                     </fieldset>
                     <input class="btn btn-primary" type="submit" id="submitBtn" value="Get Shipping Costs">
                 </form>
-                <div class="form-group row">
-                    <label class="mt-3" for="princeInfo">Price:</label>
-                    <input class="form-control" type="text" id="priceInfo" readonly>
-                </div>
             </div>
             <div class="col-sm-3"></div>
         </div>
