--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,4 @@
-<title>CSE 341 Postal Calculator</title>
+<title>CSE 341 Events Tracker</title>
 <!-- Scripts -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -8,4 +8,4 @@
 <!-- CSS -->
 
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
-<link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
+
