--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,6 +4,7 @@
 <head>
     <% include ../partials/header.ejs %>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
 </head>
 
 <body class="h-100">
@@ -14,17 +15,17 @@
         <div class="container mb-4">
             <form>
                 <div class="form-inline justify-content-center" id="filterForm">
-                    <select class="form-control mx-1" id="categorySelect">
+                    <select class="form-control mx-1 filter-form" id="categorySelect">
                         <option selected>Filter by category</option>
                     </select>
-                    <select class="form-control mx-1" id="limitSelect">
+                    <select class="form-control mx-1 filter-form" id="limitSelect">
                         <option value="10">10</option>
                         <option value="25">25</option>
                         <option value="50">50</option>
                     </select>
-                    <input type="date" class="form-control mx-1" id="startDate" min="2000-01-01">
-                    <input type="date" class="form-control mx-1" id="endDate" min="2000-01-01">
-                    <input type="checkbox" class="form-check-input" id="statusCheck">
+                    <input type="date" class="form-control mx-1 filter-form" id="startDate" min="2000-01-01">
+                    <input type="date" class="form-control mx-1 filter-form" id="endDate" min="2000-01-01">
+                    <input type="checkbox" class="form-check-input filter-form" id="statusCheck">
                     <label class="form-check-label" for="statusCheck">Show Closed Events</label>
                 </div>
             </form>
@@ -43,18 +44,14 @@
                         lat: -34.397,
                         lng: 150.644
                     },
-                    zoom: 8
+                    zoom: 10
                 });
             }
-
             exports.initMap = initMap;
         })((this.window = this.window || {}));
-
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=<%=key %>&callback=initMap&libraries=&v=weekly"></script>
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
     <script async defer type="text/javascript" src="scripts/script.js"></script>
-
 </body>
-
 </html>
